fix spacing for transit log table

--- a/frontend/src/static/custom.css
+++ b/frontend/src/static/custom.css
@@ -239,8 +239,8 @@ li.page-item a[disabled]:hover {
     }
 
     .search-bar {
-        width: 25%;
-        max-width: 25%;
+        width: 35%;
+        max-width: 35%;
     }
 }
 
